--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -1,6 +1,6 @@
 \begin{frame}
     \frametitle{Tipos de sensores}
-
+    \footnotesize
     \begin{itemize}
     \item sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
 
@@ -24,7 +24,7 @@
         
     \begin{figure}[!h]
         \centering
-        \includegraphics[height=0.9\textheight]{images/sensors_table.pdf}
+        \includegraphics[height=0.8\textheight]{images/sensors_table.pdf}
     \end{figure}
     
 
@@ -34,13 +34,7 @@
 
 \begin{frame}
     \frametitle{TODOs generales}
-    \TODO{agregar a cada sensor una imagen de un sensor real}
-    
-    \begin{figure}[!h]
-        \centering
-        \includegraphics[height=0.9\textheight]{images/sensors_table.pdf}
-    \end{figure}
-    
+    \TODO{agregar a cada sensor una imagen de un sensor real}    
 \end{frame}
 
 
