--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -457,8 +457,6 @@
 	Los coeficientes $\left\{ k_{1},k_{1},k_{1},\ldots,u_{c},v_{c}\right\}$ se consideran parte de la calibración interna de la cámara. Con frecuencia, el punto principal se utiliza como centro de la distorsión radial, aunque no es necesario que coincidan exactamente. Los coeficientes de corrección, junto con la matriz de calibración de la cámara, especifican el mapeo desde un punto de la imagen hasta un rayo en el sistema de coordenadas de la cámara y se denominan parámetros intrínsecos.
 \end{frame}
 
-
-
 \begin{frame}
 	\frametitle{Geometría Epipolar}
 	\footnotesize
@@ -483,6 +481,11 @@
 		\includegraphics[width=0.4\textwidth]{./images/epipolar_geometry.pdf}
 	\end{figure}
 	
+\end{frame}
+
+\begin{frame}
+    \frametitle{Matríz fundamental}
+    \footnotesize
 \end{frame}
 
 \begin{frame}
